refactor: support multiple comma-separated CORS origins in SecurityConfig